# multi_input_gbdt

./: .gitignore  CMakeLists.txt  Makefile  cal_auc.py  gbdt_grid_search.sh  header.csv  run.py
solvers/gbdt/src/: train.cpp
